[gd_scene load_steps=3 format=3 uid="uid://d15ldap7ubifc"]

[ext_resource type="Script" path="res://addons/pandora/ui/components/array_editor/array_manager.gd" id="1_f23k5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xsek"]

[node name="ArrayManager" type="PanelContainer"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1xsek")
script = ExtResource("1_f23k5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderContainer" type="MarginContainer" parent="MarginContainer/MainContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_bottom = 10

[node name="NewItemButton" type="Button" parent="MarginContainer/MainContainer/ScrollContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add New Item +"

[node name="ArrayItems" type="VBoxContainer" parent="MarginContainer/MainContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="MarginContainer/MainContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
